@startuml

skinparam arrowThickness 1.1
skinparam arrowColor SCRAPER_COLOR
skinparam classBackgroundColor SCRAPER_COLOR

abstract class Command {
CommandResult execute()
}
abstract class ViewCommand
class ViewAllStudentsCommand
class ViewOneStudentCommand
interface Model
class Name

Command <|-- ViewCommand

ViewCommand <|-- ViewAllStudentsCommand
ViewCommand <|-- ViewOneStudentCommand

ViewAllStudentsCommand ..> Model
ViewOneStudentCommand ..> Model
ViewOneStudentCommand ..> Name

@enduml
